better example project and move cab logic from msi to cab action.

--- a/example_project/config_template.ini
+++ b/example_project/config_template.ini
@@ -1,24 +1,6 @@
-[Product]
-# Basic product information
-name = MyProduct
+[App]
+name = ExampleApp
 version = 1.0.0
-description = My Awesome Product Description
-manufacturer = My Company, Inc.
-contact = support@example.com
-url = https://www.example.com
-help_url = https://www.example.com/support
 
-[Installation]
-# Installation settings
-target_dir = [ProgramFilesFolder]\[Manufacturer]\[ProductName]
-
-# Shortcuts in format: name:target,name2:target2
-shortcuts = Product:[INSTALLDIR]MyProduct.exe,Documentation:[INSTALLDIR]docs\index.html
-
-# Registry entries in format: root:key:name=value,root:key:name=value
-registry = HKLM:Software\MyCompany\MyProduct:Version=[ProductVersion],HKLM:Software\MyCompany\MyProduct:InstallPath=[INSTALLDIR]
-
-[Build]
-# Build settings
-output_dir = out
-cab_compression = mszip
+[Settings]
+default_path = C:\Program Files\ExampleApp
